gnome-online-accounts (3.26.2-2) UNRELEASED; urgency=medium

  * Update Vcs fields for migration to https://salsa.debian.org/
  * Use dh_missing --fail-missing

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 20:37:01 -0500

gnome-online-accounts (3.26.2-1) unstable; urgency=medium

  * New upstream release
  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2
  * Mark libgoa-1.0-doc as Multi-Arch: foreign
  * Add all of m4/ (except ax_config_dir.m4) to Files-Excluded so that
    we use the system versions instead
  * debian/libgoa-backend-1.0-1.symbols:
    Drop realmd symbols. The backend library is a "private" API
  * Don't recommend realmd: libkrb is used directly instead now.
  * Don't recommend dleyna-server on Ubuntu since it's in universe.

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 15 Dec 2017 11:54:46 -0500

gnome-online-accounts (3.26.1-1) unstable; urgency=medium

  * New upstream release
  * Bump Standards-Version to 4.1.1

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 03 Oct 2017 12:53:25 -0400

gnome-online-accounts (3.26.0-1) unstable; urgency=medium

  * New upstream translations release

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 13 Sep 2017 06:34:22 -0400

gnome-online-accounts (3.25.92-1) unstable; urgency=medium

  * New upstream translations release

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 05 Sep 2017 13:43:42 -0400

gnome-online-accounts (3.25.90-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in:
    - Bump minimum libglib2.0-dev to 2.52
  * debian/rules: Explicitly enable Todoist and Telepathy
  * Add new symbols and drop 2 apparently unused symbols
    that are part of the "private" API
    - goa_oauth2_provider_get_authentication_cookie
    - goa_oauth_provider_get_authentication_cookie
  * Bump Standards-Version to 4.1.0

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 29 Aug 2017 20:14:26 -0400

gnome-online-accounts (3.22.5-1) unstable; urgency=medium
