@@ -15,7 +15,7 @@ override_dh_auto_configure:
 		--libexecdir=\$${prefix}/lib/gnome-online-accounts \
 		--enable-gtk-doc \
 		--enable-kerberos \
-		--enable-media-server \
+		--disable-media-server \
 		--enable-facebook \
 		--enable-flickr \
 		--enable-telepathy \
@@ -38,12 +38,3 @@ override_dh_missing:
 
 override_dh_makeshlibs:
 	dh_makeshlibs -- -c4
-
-# This can be dropped if Ubuntu ever promotes dleyna-server to 'main'
-# https://launchpad.net/bugs/1738448
-override_dh_gencontrol:
-ifneq ($(shell dpkg-vendor --query vendor),Ubuntu)
-	dh_gencontrol -- -Vmedia-server:Depends='dleyna-server [linux-any]'
-else
-	dh_gencontrol
-endif
