@@ -2,6 +2,9 @@ gnome-online-accounts (3.26.2-2) UNRELEASED; urgency=medium
 
   * Update Vcs fields for migration to https://salsa.debian.org/
   * Use dh_missing --fail-missing
+  * Don't enable Media Server option and drop dleyna-server recommends.
+    It is an experimental untested feature that was only used in GNOME
+    Photos and the GNOME Photos maintainer recommended we disable it.
 
  -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 20:37:01 -0500
 
